- added functional component for about section - Made a new base component for cards - Altered Menus component to use the new card - Added state to menu component so that it dynamically set the current menu title - Altered the style of menus to remove card related code - Added anti aliasing to all elements made navbar bg red - Fixed width of the header logo so that it doesnt cause overflow

--- a/src/components/sections/menus/style.scss
+++ b/src/components/sections/menus/style.scss
@@ -2,17 +2,12 @@
   text-align: center;
 
   .menu-navigation {
-    margin: 2rem 0;
+    margin: 4rem 0;
   }
 
-  .menu-card {
-    background-color: var(--red);
-    border-radius: 20px 20px 0 0;
-    padding: 1rem;
-
+  .card-container {
     h2 {
       color: var(--off-white);
-      margin: 2rem 0;
     }
 
     .menu-item {
